--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes App</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <!-- Menambahkan Font Awesome untuk ikon -->
   </head>
   <body>
+    <app-bar></app-bar>
     <div class="container">
-      <div class="notes-list"></div>
       <note-form></note-form>
+      <note-list></note-list>
     </div>
-
-    <script src="assets/js/note-item.js"></script>
-    <script src="assets/js/note-form.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="components/app-bar.js"></script>
+    <script src="components/note-form.js"></script>
+    <script src="components/note-list.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
