implement search note

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <body>
     <app-bar></app-bar>
     <div class="container">
+      <search-bar></search-bar>
       <note-form></note-form>
       <note-list></note-list>
     </div>
     <script src="components/app-bar.js"></script>
+    <script src="components/search-bar.js"></script>
     <script src="components/note-form.js"></script>
     <script src="components/note-list.js"></script>
     <script src="script.js"></script>
