update mekanisme add data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <script src="components/search-bar.js"></script>
     <script src="components/note-form.js"></script>
     <script src="components/note-list.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
